# Castor-AI

./: .gitignore  README.md  main.py  pyproject.toml
core/: pyproject.toml
core/src/castostudio_ai_core/: __init__.py  exceptions.py  models.py  modules.py  registry.py
modules/foot_ai/: capture.py  constants.py  detector.py  display.py  focus.py  inference.py
modules/handball_ai/: inference.py
requirements/: base.txt
scripts/: download_models.py  generate_proto.py
server/: pyproject.toml
server/src/castostudio_ai_server/: __init__.py  cli.py  server.py  service.py
server/src/castostudio_ai_server/proto/: __init__.py  ia_analysis_pb2.py  ia_analysis_pb2_grpc.py
tests/: test_registry.py  test_service.py
