[project]
name = "castostudio-ai-core"
version = "0.1.0"
description = "Core contracts for CastoStudio AI modules."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/castostudio_ai_core"]
