[project]
name = "castostudio-ai-server"
version = "0.1.0"
description = "Async gRPC server for CastoStudio AI modules."
requires-python = ">=3.11"
dependencies = [
  "castostudio-ai-core>=0.1.0",
  "grpcio>=1.73.0",
  "protobuf>=6.31.0",
]

[project.scripts]
castostudio-ai-server = "castostudio_ai_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/castostudio_ai_server"]
